--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,12 @@
             <artifactId>guava</artifactId>
             <version>19.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.4.Final</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
